src/objects/Temp_Stop_Setting__c.object
<CustomObject>
    <fields>
        <fullName>TemStop_Max_Days__c</fullName>
        <label>TemStop Max Days</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TemStop_Max_Issues__c</fullName>
        <label>TemStop Max Issues</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TemStop_Min_Days__c</fullName>
        <label>TemStop Min Days</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TemStop_Min_Issues__c</fullName>
        <label>TemStop Min Issues</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TempStop_Min_Gap_Days__c</fullName>
        <label>TempStop Min Gap (Days)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Temp Stop Setting</label>
    <nameField>
        <label>Temp Stop Setting Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Temp Stop Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>